refactor and use request and response dtos